move end play before host connect

--- a/upgrade_ubuntu.yml
+++ b/upgrade_ubuntu.yml
@@ -1,3 +1,15 @@
+- name: Check Weekday or Overwrite
+  hosts: localhost
+  connection: local
+  vars:
+    overwrite_weekday: false
+  tasks:
+    - name: Check Weekday or Overwrite
+      meta: end_play
+      when:
+        - not overwrite_weekday
+        - ansible_date_time.weekday_number != "2"
+
 - name: Upgrade Ubuntu Hosts
   hosts: ubuntu
   become: true
