--- a/upgrade_ubuntu.yml
+++ b/upgrade_ubuntu.yml
@@ -49,7 +49,7 @@
     - name: Calculate Result Variables
       set_fact:
         msg:
-          color: "{{ if upgrade.stderr_lines }}FF0000{{ else }}00FF00{{ endif }}"
+          color: "{{ 'FF0000' if upgrade.stderr_lines else '00FF00' }}"
           title: "Upgrade Result of {{ inventory_hostname }}"
         msg_color: "{{ if upgrade.stderr_lines }}FF0000{{ else }}00FF00{{ endif }}"
         msg_title: "Upgrade Result of {{ inventory_hostname }}"
