--- a/upgrade_ubuntu.yml
+++ b/upgrade_ubuntu.yml
@@ -12,7 +12,13 @@
         
     - name: Register Start Time
       set_fact:
-        time_start: ansible_date_time
+        time_start:
+          day: ansible_date_time.day
+          month: ansible_date_time.month
+          year: ansible_date_time.year
+          hour: ansible_date_time.hour
+          minute: ansible_date_time.minute
+          second: ansible_date_time.second
         
     - name: Clean Up Apt
       apt:
@@ -44,7 +50,13 @@
         
     - name: Register End Time
       set_fact:
-        time_end: ansible_date_time
+        time_end:
+          day: ansible_date_time.day
+          month: ansible_date_time.month
+          year: ansible_date_time.year
+          hour: ansible_date_time.hour
+          minute: ansible_date_time.minute
+          second: ansible_date_time.second
 
     - name: Calculate Result Variables
       set_fact:
