add start and end time

--- a/upgrade_ubuntu.yml
+++ b/upgrade_ubuntu.yml
@@ -50,13 +50,7 @@
         
     - name: Register End Time
       set_fact:
-        time_end:
-          day: ansible_date_time.day
-          month: ansible_date_time.month
-          year: ansible_date_time.year
-          hour: ansible_date_time.hour
-          minute: ansible_date_time.minute
-          second: ansible_date_time.second
+        time_end: {{ ansible_date_time }}
 
     - name: Calculate Result Variables
       set_fact:
